# gstreamer-sys

./: Cargo.toml  Gir_GstSdp.toml  Gir_GstWebRTC.toml
gir-files/: Gst-1.0.gir  GstWebRTC-1.0.gir
gstreamer-sdp-sys/: Cargo.toml  README.md
gstreamer-sdp-sys/src/: lib.rs
gstreamer-sys/src/: lib.rs
gstreamer-webrtc-sys/: Cargo.toml  README.md  build.rs
gstreamer-webrtc-sys/src/: lib.rs
