[badges.travis-ci]
branch = "master"
repository = "sdroege/gstreamer-sys"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[features]
dox = []
v1_2 = []
v1_4 = ["v1_2"]
v1_8 = ["v1_4"]
v1_8_1 = ["v1_8"]

[lib]
name = "gstreamer_sdp_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstsdp-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstsdp-1.0"
name = "gstreamer-sdp-sys"
readme = "README.md"
repository = "https://github.com/sdroege/gstreamer-sys"
version = "0.3.0"
